Fix overlaping menu and pics glary

--- a/Innovate/www/static/ga/css/style.css
+++ b/Innovate/www/static/ga/css/style.css
@@ -108,7 +108,7 @@
 
 .gamma-buttons {
 	position: absolute;
-	top: 10px;
+	top: 70px;
 	right: 10px;
 	z-index: 10001;
 }
@@ -309,6 +309,7 @@ button.gamma-btn-sspause:before {
 	.gamma-buttons {
 		float: left;
 		clear: both;
+
 	}
 
 }
